--- a/WolvenKit/Views/Templates/HandleTemplateView.xaml
+++ b/WolvenKit/Views/Templates/HandleTemplateView.xaml
@@ -22,14 +22,19 @@
          x:Name="ComboBox"
          Background="{DynamicResource MahApps.Brushes.Accent3}"
          DataContext="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HandleTemplateView}}}"
-         DisplayMemberPath="REDName"
          ItemsSource="{Binding BindingCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
          SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
          SelectionChanged="ComboBox_OnSelectionChanged"
          Style="{DynamicResource MahApps.Styles.ComboBox.DataGrid.Editing}"
-         />
+         >
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
 
-        <!--<Button
+        <Button
          Grid.Column="1"
          Width="35"
          Background="{DynamicResource MahApps.Brushes.Accent}"
@@ -44,6 +49,6 @@
                  Kind="ArrowRight"
                  />
             </Button.Content>
-        </Button>-->
+        </Button>
     </Grid>
 </UserControl>
