adds fixed point editor, verify input on that and flaot

--- a/WolvenKit/Views/Templates/RedFixedPointEditor.xaml
+++ b/WolvenKit/Views/Templates/RedFixedPointEditor.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="WolvenKit.Views.Editors.RedFloatEditor"
+<UserControl x:Class="WolvenKit.Views.Editors.RedFixedPointEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,11 +8,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="400">
 
-    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:RedFloatEditor}}}">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:RedFixedPointEditor}}}">
 
-        <TextBox x:Name="TextBox" PreviewTextInput="NumberValidationTextBox" 
+        <TextBox x:Name="TextBox" PreviewTextInput="NumberValidationTextBox"
             Text="{Binding Text}"
             />
-        
+
     </Grid>
 </UserControl>
